project/mp4cloud/chart/mp4cloud/手动部署所需文件/nacos_bak/nacos-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nacos-ingress
  namespace: mp4cloud 
  annotations:
    nginx.ingress.kubernetes.io/app-root: /nacos 
    nginx.ingress.kubernetes.io/configuration-snippet: |
             proxy_set_header  Host        $host;
             proxy_set_header  X-Real-IP    $remote_addr;
             proxy_set_header  X-Forwarded-For $proxy_add_x_forwarded_for;
spec:
  rules:
  - host: nacos.frcloud.io
    http:
      paths:
      - path: /
        backend:
          serviceName: nacos-headless 
          servicePort: 8848
